--- a/app/.env
+++ b/app/.env
@@ -28,3 +28,10 @@ APP_SECRET=89e630bba2f98084e4852888747e3550
 DATABASE_URL="mysql://root:dev@db:3306/db?serverVersion=10.11.2-MariaDB&charset=utf8mb4"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=15&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###< microsoft/azurite ###
+AZURE_STORAGE_ACCOUNT="devstoreaccount1"
+AZURE_STORAGE_ACCESS_KEY=""    // get azurite demo key
+AZURE_STORAGE_BLOB_ENDPOINT=http://azurite:10000/devstoreaccount1
+AZURE_STORAGE_CONTAINER="demo-container"
+###> microsoft/azurite ###
