fix: fix env comment

--- a/app/.env
+++ b/app/.env
@@ -31,7 +31,7 @@ DATABASE_URL="mysql://root:dev@db:3306/db?serverVersion=10.11.2-MariaDB&charset=
 
 ###< microsoft/azurite ###
 AZURE_STORAGE_ACCOUNT="devstoreaccount1"
-AZURE_STORAGE_ACCESS_KEY=""    // get azurite demo key
+AZURE_STORAGE_ACCESS_KEY=""    ### get azurite demo key
 AZURE_STORAGE_BLOB_ENDPOINT=http://azurite:10000/devstoreaccount1
 AZURE_STORAGE_CONTAINER="demo-container"
 ###> microsoft/azurite ###
